--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 /test/version_tmp/
 /tmp/
 
+# rspec failure tracking
+.rspec_status
+
 # Used by dotenv library to load environment variables.
 # .env
 
